<resources>
    <string name="app_name">gb_calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="ac">ac</string>
    <string name="division">÷</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="result">=</string>
    <string name="multiplication">×</string>
    <string name="hint_result">0</string>
    <string name="light_select_theme">Light</string>
    <string name="dark_select_theme">Dark</string>
    <string name="choose_theme">Choose a theme:</string>
</resources>